Exercícios feitos de HTML II

--- a/exercicio2/index.html
+++ b/exercicio2/index.html
@@ -17,12 +17,21 @@
         <div class="c">
             <div class="d">
                 <h2>Chuva</h2>
+                <img src="./media/chuva.jpeg" width="13%">
+                <audio src="./media/chuva.mp3" controls ></audio>
+                <video src="./media/chuva.mp4" width="15%" controls></video>
             </div>
             <div class="d">
                 <h2>Animais no mato</h2>
+                <img src="./media/animais.jpeg" width="13%">
+                <audio src="./media/animais.mp3" controls></audio>
+                <video src="./media/animais.mp4" width="15%" controls></video>
             </div>
             <div class="d">
                 <h2>Tempestade</h2>
+                <img src="./media/tempestade.jpeg" width="13%">
+                <audio src="./media/tempestade.mp3" controls></audio>
+                <video src="./media/tempestade.mp4" width="15%" controls></video>
             </div>
         </div>
     
