--- a/exercicio3/index.html
+++ b/exercicio3/index.html
@@ -28,7 +28,7 @@
     
     </div>
     <div class="e">
-        <p>Sugira um clima!</p>
+        <p><a href="./sugestao.html">Sugira um clima!</a></p>
     </div>
     
 </body>
