--- a/exercicio3/sugestao.html
+++ b/exercicio3/sugestao.html
@@ -16,6 +16,18 @@
     <div class="b">
         <div class="c">
         <!-- Seu formukário aqui!-->
+        <form action="#">
+            <label for="nome">Nome</label>
+            <input type="text" name="nome" id="nome">
+            
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email">
+
+            <label for="sugestão de clima"> Sugestão de Clima</label>
+            <input type="text" name="sugestão de clima" id="sugestão de clima">
+        
+            <button type="submit"> Enviar </button>
+        </form>
         </div>
 
     </div>
